tests/SemanticError/Variables/Test3/BadConstantType.c
int main(){
	char a;
	a=2550000;
	return 0;
}
